Ipad size post search style fixes and hover overflow fixes

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -43,6 +43,12 @@
 }
 
 @media (width: 768px) {
+	#sidebar .post-type-search-form input { width: 690px; }
+	#sidebar .post-type-search-results { width: 579px; }
+	#sidebar .post-type-search-results .row > div > ul { width: 100% !important; }
+	#sidebar .post-type-search-results .row > div > ul li a { margin-left: 20px; width: 549px; }
+	#sidebar .post-type-search-term > div > .row > div { margin-left: 20px; }
+	
 	.page-content, #footer-widget-wrap { padding-left: 20px; }
 	#footer { margin-left: 0; }
 }
