--- a/style.css
+++ b/style.css
@@ -215,8 +215,16 @@ p i { vertical-align: middle !important; padding-bottom: 2px; }
 }
 .post-type-search-results ul { list-style-type: none; margin-left: 0; margin-bottom: 0; }
 .post-type-search-results ul li { font-size: 13px !important; }
-.post-type-search-results ul li a { display: block; width: 100%; color: #333; text-decoration: none; padding: 4px 0 4px 15px; }
+.post-type-search-results ul li a { 
+	display: block; 
+	width: 100%; 
+	color: #333; 
+	text-decoration: none; 
+	padding: 4px 0 4px 15px; 
+}
 .post-type-search-results ul li a:hover { background: #0088cc; color: #fff; text-decoration: none; }
+.post-type-search-results ul li:first-child a { border-radius: 5px 5px 0 0; -webkit-border-radius: 5px 5px 0 0; }
+.post-type-search-results ul li:last-child a { border-radius: 0 0 5px 5px; -webkit-border-radius: 0 0 5px 5px; }
 .post-type-search-message { padding-top: 10px; margin-bottom: 0; }
 
 .post-type-search-term { 
